updated with trying to change tuple value

--- a/notebooks/lp_variables_milestone1.ipynb
+++ b/notebooks/lp_variables_milestone1.ipynb
@@ -138,6 +138,8 @@
     "a_tuple = 1, 2, 3\n",
     "b_tuple = a_tuple\n",
     "\n",
+    "b_tuple[0] = 4\n",
+    "\n",
     "print(f\"a_tuple: {a_tuple}, b_tuple: {b_tuple}\")"
    ]
   },
